test/visibility/import/enablesUnqualified/multipleUnqualified/outerImportLimitsInnerImport-error.good
outerImportLimitsInnerImport-error.chpl:12: In function 'main':
outerImportLimitsInnerImport-error.chpl:13: error: 'y' undeclared (first use this function)
